@@ -19,6 +19,7 @@ package org.apache.kafka.common.security.ssl;
 import org.apache.kafka.common.config.SslConfigs;
 import org.apache.kafka.common.config.types.Password;
 import org.apache.kafka.test.TestUtils;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -194,13 +195,19 @@ public class DefaultSslEngineFactoryTest {
 
     private static final Password KEY_PASSWORD = new Password("key-password");
 
-    private DefaultSslEngineFactory factory = new DefaultSslEngineFactory();
+    private DefaultSslEngineFactory factory;
     Map<String, Object> configs = new HashMap<>();
 
     @BeforeEach
     public void setUp() {
-        factory = new DefaultSslEngineFactory();
+        factory = sslEngineFactory();
         configs.put(SslConfigs.SSL_PROTOCOL_CONFIG, "TLSv1.2");
+        configs.put(SslConfigs.SSL_CIPHER_SUITES_CONFIG, List.of());
+        configs.put(SslConfigs.SSL_ENABLED_PROTOCOLS_CONFIG, List.of());
+    }
+
+    protected DefaultSslEngineFactory sslEngineFactory() {
+        return new DefaultSslEngineFactory();
     }
 
     @Test
@@ -211,7 +218,7 @@ public class DefaultSslEngineFactoryTest {
 
         KeyStore trustStore = factory.truststore();
         List<String> aliases = Collections.list(trustStore.aliases());
-        assertEquals(Collections.singletonList("kafka0"), aliases);
+        assertEquals(List.of("kafka0"), aliases);
         assertNotNull(trustStore.getCertificate("kafka0"), "Certificate not loaded");
         assertNull(trustStore.getKey("kafka0", null), "Unexpected private key");
     }
@@ -265,7 +272,7 @@ public class DefaultSslEngineFactoryTest {
 
         KeyStore keyStore = factory.keystore();
         List<String> aliases = Collections.list(keyStore.aliases());
-        assertEquals(Collections.singletonList("kafka"), aliases);
+        assertEquals(List.of("kafka"), aliases);
         assertNotNull(keyStore.getCertificate("kafka"), "Certificate not loaded");
         assertNotNull(keyStore.getKey("kafka", keyPassword == null ? null : keyPassword.value().toCharArray()),
             "Private key not loaded");
@@ -279,7 +286,7 @@ public class DefaultSslEngineFactoryTest {
 
         KeyStore trustStore = factory.truststore();
         List<String> aliases = Collections.list(trustStore.aliases());
-        assertEquals(Collections.singletonList("kafka0"), aliases);
+        assertEquals(List.of("kafka0"), aliases);
         assertNotNull(trustStore.getCertificate("kafka0"), "Certificate not found");
         assertNull(trustStore.getKey("kafka0", null), "Unexpected private key");
     }
@@ -294,7 +301,7 @@ public class DefaultSslEngineFactoryTest {
 
         KeyStore keyStore = factory.keystore();
         List<String> aliases = Collections.list(keyStore.aliases());
-        assertEquals(Collections.singletonList("kafka"), aliases);
+        assertEquals(List.of("kafka"), aliases);
         assertNotNull(keyStore.getCertificate("kafka"), "Certificate not loaded");
         assertNotNull(keyStore.getKey("kafka", null), "Private key not loaded");
     }
@@ -309,7 +316,7 @@ public class DefaultSslEngineFactoryTest {
 
         KeyStore keyStore = factory.keystore();
         List<String> aliases = Collections.list(keyStore.aliases());
-        assertEquals(Collections.singletonList("kafka"), aliases);
+        assertEquals(List.of("kafka"), aliases);
         assertNotNull(keyStore.getCertificate("kafka"), "Certificate not found");
         assertNotNull(keyStore.getKey("kafka", KEY_PASSWORD.value().toCharArray()), "Private key not found");
     }
