@@ -50,14 +50,15 @@ import org.apache.kafka.connect.runtime.SinkConnectorConfig;
 import org.apache.kafka.connect.runtime.SourceConnectorConfig;
 import org.apache.kafka.connect.runtime.TargetState;
 import org.apache.kafka.connect.runtime.TaskStatus;
+import org.apache.kafka.connect.runtime.TooManyTasksException;
 import org.apache.kafka.connect.runtime.Worker;
-import org.apache.kafka.connect.runtime.rest.entities.ConnectorOffsets;
-import org.apache.kafka.connect.storage.PrivilegedWriteException;
 import org.apache.kafka.connect.runtime.rest.InternalRequestSignature;
 import org.apache.kafka.connect.runtime.rest.RestClient;
 import org.apache.kafka.connect.runtime.rest.entities.ConnectorInfo;
+import org.apache.kafka.connect.runtime.rest.entities.ConnectorOffsets;
 import org.apache.kafka.connect.runtime.rest.entities.ConnectorStateInfo;
 import org.apache.kafka.connect.runtime.rest.entities.ConnectorType;
+import org.apache.kafka.connect.runtime.rest.entities.Message;
 import org.apache.kafka.connect.runtime.rest.entities.TaskInfo;
 import org.apache.kafka.connect.runtime.rest.errors.BadRequestException;
 import org.apache.kafka.connect.runtime.rest.errors.ConnectRestException;
@@ -68,22 +69,20 @@ import org.apache.kafka.connect.source.SourceConnector;
 import org.apache.kafka.connect.source.SourceTask;
 import org.apache.kafka.connect.storage.ClusterConfigState;
 import org.apache.kafka.connect.storage.ConfigBackingStore;
+import org.apache.kafka.connect.storage.PrivilegedWriteException;
 import org.apache.kafka.connect.storage.StatusBackingStore;
 import org.apache.kafka.connect.util.Callback;
 import org.apache.kafka.connect.util.ConnectUtils;
 import org.apache.kafka.connect.util.ConnectorTaskId;
 import org.apache.kafka.connect.util.FutureCallback;
 import org.apache.kafka.connect.util.SinkUtils;
+import org.apache.kafka.connect.util.Stage;
+import org.apache.kafka.connect.util.TemporaryStage;
+
 import org.slf4j.Logger;
 
-import javax.crypto.KeyGenerator;
-import javax.crypto.SecretKey;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.UriBuilder;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -98,17 +97,26 @@ import java.util.concurrent.ConcurrentSkipListSet;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.concurrent.LinkedBlockingDeque;
+import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
+import javax.crypto.KeyGenerator;
+import javax.crypto.SecretKey;
+
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.UriBuilder;
+
+import static org.apache.kafka.clients.consumer.ConsumerConfig.GROUP_ID_CONFIG;
+import static org.apache.kafka.common.utils.Utils.UncheckedCloseable;
+import static org.apache.kafka.connect.runtime.ConnectorConfig.CONNECTOR_CLIENT_CONSUMER_OVERRIDES_PREFIX;
 import static org.apache.kafka.connect.runtime.WorkerConfig.TOPIC_TRACKING_ENABLE_CONFIG;
 import static org.apache.kafka.connect.runtime.distributed.ConnectProtocol.CONNECT_PROTOCOL_V0;
 import static org.apache.kafka.connect.runtime.distributed.ConnectProtocolCompatibility.EAGER;
@@ -144,13 +152,12 @@ import static org.apache.kafka.connect.runtime.distributed.IncrementalCooperativ
  * </p>
  */
 public class DistributedHerder extends AbstractHerder implements Runnable {
-    private static final AtomicInteger CONNECT_CLIENT_ID_SEQUENCE = new AtomicInteger(1);
     private final Logger log;
 
     private static final long FORWARD_REQUEST_SHUTDOWN_TIMEOUT_MS = TimeUnit.SECONDS.toMillis(10);
     private static final long START_AND_STOP_SHUTDOWN_TIMEOUT_MS = TimeUnit.SECONDS.toMillis(1);
     private static final long RECONFIGURE_CONNECTOR_TASKS_BACKOFF_INITIAL_MS = 250;
-    private static final long RECONFIGURE_CONNECTOR_TASKS_BACKOFF_MAX_MS = 60000;
+    static final long RECONFIGURE_CONNECTOR_TASKS_BACKOFF_MAX_MS = 60000;
     private static final long CONFIG_TOPIC_WRITE_PRIVILEGES_BACKOFF_MS = 250;
     private static final int START_STOP_THREAD_POOL_SIZE = 8;
     private static final short BACKOFF_RETRIES = 5;
@@ -172,7 +179,8 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
     // Visible for testing
     ExecutorService forwardRequestExecutor;
-    private final ExecutorService herderExecutor;
+    // Visible for testing
+    final ExecutorService herderExecutor;
     // Visible for testing
     ExecutorService startAndStopExecutor;
     private final WorkerGroupMember member;
@@ -211,6 +219,8 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     private volatile long keyExpiration;
     private short currentProtocolVersion;
     private short backoffRetries;
+    private volatile DistributedHerderRequest currentRequest;
+    private volatile Stage tickThreadStage;
 
     // visible for testing
     // The latest pending restart request for each named connector
@@ -221,6 +231,8 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     Thread herderThread;
 
     private final DistributedConfig config;
+
+    private Future<?> herderTask;
 
     /**
      * Create a herder that will form a Connect cluster with other {@link DistributedHerder} instances (in this or other JVMs)
@@ -242,6 +254,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
      * @param uponShutdown       any {@link AutoCloseable} objects that should be closed when this herder is {@link #stop() stopped},
      *                           after all services and resources owned by this herder are stopped
      */
+    @SuppressWarnings("this-escape")
     public DistributedHerder(DistributedConfig config,
                              Time time,
                              Worker worker,
@@ -259,6 +272,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     }
 
     // visible for testing
+    @SuppressWarnings("this-escape")
     DistributedHerder(DistributedConfig config,
                       Worker worker,
                       String workerId,
@@ -273,8 +287,9 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                       ConnectorClientConfigOverridePolicy connectorClientConfigOverridePolicy,
                       List<String> restNamespace,
                       ExecutorService forwardRequestExecutor,
-                      AutoCloseable... uponShutdown) {
-        super(worker, workerId, kafkaClusterId, statusBackingStore, configBackingStore, connectorClientConfigOverridePolicy);
+                      // https://github.com/mockito/mockito/issues/2601 explains why we can't use varargs here
+                      AutoCloseable[] uponShutdown) {
+        super(worker, workerId, kafkaClusterId, statusBackingStore, configBackingStore, connectorClientConfigOverridePolicy, time);
 
         this.time = time;
         this.herderMetrics = new HerderMetrics(metrics);
@@ -288,10 +303,10 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
         this.restClient = restClient;
         this.isTopicTrackingEnabled = config.getBoolean(TOPIC_TRACKING_ENABLE_CONFIG);
         this.restNamespace = Objects.requireNonNull(restNamespace);
-        this.uponShutdown = Arrays.asList(uponShutdown);
+        this.uponShutdown = List.of(uponShutdown);
 
         String clientIdConfig = config.getString(CommonClientConfigs.CLIENT_ID_CONFIG);
-        String clientId = clientIdConfig.length() <= 0 ? "connect-" + CONNECT_CLIENT_ID_SEQUENCE.getAndIncrement() : clientIdConfig;
+        String clientId = clientIdConfig.isEmpty() ? "connect-" + workerId : clientIdConfig;
         // Thread factory uses String.format and '%' is handled as a placeholder
         // need to escape if the client.id contains an actual % character
         String escapedClientIdForThreadNameFormat = clientId.replace("%", "%%");
@@ -330,6 +345,8 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
         keyExpiration = Long.MAX_VALUE;
         sessionKey = null;
         backoffRetries = BACKOFF_RETRIES;
+        currentRequest = null;
+        tickThreadStage = new Stage("awaiting startup", time.milliseconds());
 
         currentProtocolVersion = ConnectProtocolCompatibility.compatibility(
             config.getString(DistributedConfig.CONNECT_PROTOCOL_CONFIG)
@@ -350,7 +367,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
     @Override
     public void start() {
-        this.herderExecutor.submit(this);
+        herderTask = this.herderExecutor.submit(this);
     }
 
     @Override
@@ -359,25 +376,33 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             log.info("Herder starting");
             herderThread = Thread.currentThread();
 
-            startServices();
-
-            log.info("Herder started");
-            running = true;
+            try (TickThreadStage stage = new TickThreadStage("initializing and reading to the end of internal topics")) {
+                startServices();
+            }
 
             while (!stopping.get()) {
                 tick();
+
+                if (!isReady()) {
+                    ready();
+                    log.info("Herder started");
+                }
             }
 
+            recordTickThreadStage("shutting down");
             halt();
 
             log.info("Herder stopped");
-            herderMetrics.close();
         } catch (Throwable t) {
             log.error("Uncaught exception in herder work thread, exiting: ", t);
+            Utils.closeQuietly(this::stopServices, "herder services");
             Exit.exit(1);
-        } finally {
-            running = false;
         }
+    }
+
+    // public for testing
+    public Future<?> herderTask() {
+        return herderTask;
     }
 
     // public for testing
@@ -399,7 +424,9 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             }
 
             log.debug("Ensuring group membership is still active");
-            member.ensureActive();
+            String stageDescription = "ensuring membership in the cluster";
+            member.ensureActive(() -> new TickThreadStage(stageDescription));
+            completeTickThreadStage();
             // Ensure we're in a good state in our group. If not restart and everything should be setup to rejoin
             if (!handleRebalanceCompleted()) return;
         } catch (WakeupException e) {
@@ -415,7 +442,9 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 // We were accidentally fenced out, possibly by a zombie leader
                 try {
                     log.debug("Reclaiming write privileges for config topic after being fenced out");
-                    configBackingStore.claimWritePrivileges();
+                    try (TickThreadStage stage = new TickThreadStage("reclaiming write privileges for the config topic")) {
+                        configBackingStore.claimWritePrivileges();
+                    }
                     fencedFromConfigTopic = false;
                     log.debug("Successfully reclaimed write privileges for config topic after being fenced out");
                 } catch (Exception e) {
@@ -437,7 +466,10 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             keyExpiration = Long.MAX_VALUE;
             try {
                 SessionKey newSessionKey = new SessionKey(keyGenerator.generateKey(), now);
-                writeToConfigTopicAsLeader(() -> configBackingStore.putSessionKey(newSessionKey));
+                writeToConfigTopicAsLeader(
+                        "writing a new session key to the config topic",
+                        () -> configBackingStore.putSessionKey(newSessionKey)
+                );
             } catch (Exception e) {
                 log.info("Failed to write new session key to config topic; forcing a read to the end of the config topic before possibly retrying", e);
                 canReadConfigs = false;
@@ -458,7 +490,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             if (next == null) {
                 break;
             } else if (now >= next.at) {
-                requests.pollFirst();
+                currentRequest = requests.pollFirst();
             } else {
                 scheduledTick = next.at;
                 break;
@@ -531,7 +563,10 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             log.trace("Polling for group activity; will wait for {}ms or until poll is interrupted by "
                     + "either config backing store updates or a new external request",
                     nextRequestTimeoutMs);
-            member.poll(nextRequestTimeoutMs);
+            String pollDurationDescription = scheduledTick != null ? "for up to " + nextRequestTimeoutMs + "ms or " : "";
+            String stageDescription = "polling the group coordinator " + pollDurationDescription + "until interrupted";
+            member.poll(nextRequestTimeoutMs, () -> new TickThreadStage(stageDescription));
+            completeTickThreadStage();
             // Ensure we're in a good state in our group. If not restart and everything should be setup to rejoin
             handleRebalanceCompleted();
         } catch (WakeupException e) { // FIXME should not be WakeupException
@@ -676,7 +711,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     private void processConnectorConfigUpdates(Set<String> connectorConfigUpdates) {
         // If we only have connector config updates, we can just bounce the updated connectors that are
         // currently assigned to this worker.
-        Set<String> localConnectors = assignment == null ? Collections.emptySet() : new HashSet<>(assignment.connectors());
+        Set<String> localConnectors = assignment == null ? Set.of() : new HashSet<>(assignment.connectors());
         Collection<Callable<Void>> connectorsToStart = new ArrayList<>();
         log.trace("Processing connector config updates; "
                 + "currently-owned connectors are {}, and to-be-updated connectors are {}",
@@ -691,13 +726,16 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             boolean remains = configState.contains(connectorName);
             log.info("Handling connector-only config update by {} connector {}",
                     remains ? "restarting" : "stopping", connectorName);
-            worker.stopAndAwaitConnector(connectorName);
+            try (TickThreadStage stage = new TickThreadStage("stopping connector " + connectorName)) {
+                worker.stopAndAwaitConnector(connectorName);
+            }
             // The update may be a deletion, so verify we actually need to restart the connector
             if (remains) {
                 connectorsToStart.add(getConnectorStartingCallable(connectorName));
             }
         }
-        startAndStop(connectorsToStart);
+        String stageDescription = "restarting " + connectorsToStart.size() + " reconfigured connectors";
+        startAndStop(connectorsToStart, stageDescription);
     }
 
     private void processTargetStateChanges(Set<String> connectorTargetStateChanges) {
@@ -729,7 +767,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
     private void processTaskConfigUpdatesWithIncrementalCooperative(Set<ConnectorTaskId> taskConfigUpdates) {
         Set<ConnectorTaskId> localTasks = assignment == null
-                                          ? Collections.emptySet()
+                                          ? Set.of()
                                           : new HashSet<>(assignment.tasks());
         log.trace("Processing task config updates with incremental cooperative rebalance protocol; "
                 + "currently-owned tasks are {}, and to-be-updated tasks are {}",
@@ -741,7 +779,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
     private void stopReconfiguredTasks(Set<String> connectors) {
         Set<ConnectorTaskId> localTasks = assignment == null
-                ? Collections.emptySet()
+                ? Set.of()
                 : new HashSet<>(assignment.tasks());
 
         List<ConnectorTaskId> tasksToStop = localTasks.stream()
@@ -755,10 +793,15 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
         }
 
         log.info("Handling task config update by stopping tasks {}, which will be restarted after rebalance if still assigned to this worker", tasksToStop);
-        worker.stopAndAwaitTasks(tasksToStop);
+        try (TickThreadStage stage = new TickThreadStage("stopping " + tasksToStop.size() + " reconfigured tasks")) {
+            worker.stopAndAwaitTasks(tasksToStop);
+        }
         tasksToRestart.addAll(tasksToStop);
     }
 
+    /**
+     * Perform an orderly shutdown when triggered via {@link #stop()}
+     */
     // public for testing
     public void halt() {
         synchronized (this) {
@@ -767,8 +810,6 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             worker.stopAndAwaitConnectors();
             worker.stopAndAwaitTasks();
 
-            member.stop();
-
             // Explicitly fail any outstanding requests so they actually get a response and get an
             // understandable reason for their failure.
             DistributedHerderRequest request = requests.pollFirst();
@@ -776,7 +817,6 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 request.callback().onCompletion(new ConnectException("Worker is shutting down"), null);
                 request = requests.pollFirst();
             }
-
             stopServices();
         }
     }
@@ -786,8 +826,17 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
         try {
             super.stopServices();
         } finally {
-            this.uponShutdown.forEach(closeable -> Utils.closeQuietly(closeable, closeable != null ? closeable.toString() : "<unknown>"));
+            closeResources();
         }
+    }
+
+    /**
+     * Close resources managed by this herder but which are not explicitly started.
+     */
+    private void closeResources() {
+        Utils.closeQuietly(member::stop, "worker group member");
+        Utils.closeQuietly(herderMetrics::close, "herder metrics");
+        this.uponShutdown.forEach(closeable -> Utils.closeQuietly(closeable, closeable != null ? closeable.toString() : "<unknown>"));
     }
 
     // Timeout for herderExecutor to gracefully terminate is set to a value to accommodate
@@ -804,24 +853,21 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
         stopping.set(true);
         member.wakeup();
-        herderExecutor.shutdown();
-        try {
-            if (!herderExecutor.awaitTermination(herderExecutorTimeoutMs(), TimeUnit.MILLISECONDS))
-                herderExecutor.shutdownNow();
-
-            forwardRequestExecutor.shutdown();
-            startAndStopExecutor.shutdown();
-
-            if (!forwardRequestExecutor.awaitTermination(FORWARD_REQUEST_SHUTDOWN_TIMEOUT_MS, TimeUnit.MILLISECONDS))
-                forwardRequestExecutor.shutdownNow();
-            if (!startAndStopExecutor.awaitTermination(START_AND_STOP_SHUTDOWN_TIMEOUT_MS, TimeUnit.MILLISECONDS))
-                startAndStopExecutor.shutdownNow();
-        } catch (InterruptedException e) {
-            // ignore
-        }
-
+        ThreadUtils.shutdownExecutorServiceQuietly(herderExecutor, herderExecutorTimeoutMs(), TimeUnit.MILLISECONDS);
+        ThreadUtils.shutdownExecutorServiceQuietly(forwardRequestExecutor, FORWARD_REQUEST_SHUTDOWN_TIMEOUT_MS, TimeUnit.MILLISECONDS);
+        ThreadUtils.shutdownExecutorServiceQuietly(startAndStopExecutor, START_AND_STOP_SHUTDOWN_TIMEOUT_MS, TimeUnit.MILLISECONDS);
         log.info("Herder stopped");
-        running = false;
+    }
+
+    @Override
+    public void healthCheck(Callback<Void> callback) {
+        addRequest(
+                () -> {
+                    callback.onCompletion(null, null);
+                    return null;
+                },
+                forwardErrorAndTickThreadStages(callback)
+        );
     }
 
     @Override
@@ -834,7 +880,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                     callback.onCompletion(null, configState.connectors());
                 return null;
             },
-            forwardErrorCallback(callback)
+            forwardErrorAndTickThreadStages(callback)
         );
     }
 
@@ -855,27 +901,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 }
                 return null;
             },
-            forwardErrorCallback(callback)
-        );
-    }
-
-    @Override
-    public void tasksConfig(String connName, final Callback<Map<ConnectorTaskId, Map<String, String>>> callback) {
-        log.trace("Submitting tasks config request {}", connName);
-
-        addRequest(
-            () -> {
-                if (checkRebalanceNeeded(callback))
-                    return null;
-
-                if (!configState.contains(connName)) {
-                    callback.onCompletion(new NotFoundException("Connector " + connName + " not found"), null);
-                } else {
-                    callback.onCompletion(null, buildTasksConfig(connName));
-                }
-                return null;
-            },
-            forwardErrorCallback(callback)
+            forwardErrorAndTickThreadStages(callback)
         );
     }
 
@@ -904,19 +930,22 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                     callback.onCompletion(new NotFoundException("Connector " + connName + " not found"), null);
                 } else {
                     log.trace("Removing connector config {} {}", connName, configState.connectors());
-                    writeToConfigTopicAsLeader(() -> configBackingStore.removeConnectorConfig(connName));
+                    writeToConfigTopicAsLeader(
+                            "removing the config for connector " + connName + " from the config topic",
+                            () -> configBackingStore.removeConnectorConfig(connName)
+                    );
                     callback.onCompletion(null, new Created<>(false, null));
                 }
                 return null;
             },
-            forwardErrorCallback(callback)
+            forwardErrorAndTickThreadStages(callback)
         );
     }
 
     @Override
     protected Map<String, ConfigValue> validateSinkConnectorConfig(SinkConnector connector, ConfigDef configDef, Map<String, String> config) {
         Map<String, ConfigValue> result = super.validateSinkConnectorConfig(connector, configDef, config);
-        validateSinkConnectorGroupId(result);
+        validateSinkConnectorGroupId(config, result);
         return result;
     }
 
@@ -929,12 +958,25 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     }
 
 
-    private void validateSinkConnectorGroupId(Map<String, ConfigValue> validatedConfig) {
-        ConfigValue validatedName = validatedConfig.get(ConnectorConfig.NAME_CONFIG);
-        String name = (String) validatedName.value();
-        if (workerGroupId.equals(SinkUtils.consumerGroupId(name))) {
-            validatedName.addErrorMessage("Consumer group for sink connector named " + name +
-                    " conflicts with Connect worker group " + workerGroupId);
+    private void validateSinkConnectorGroupId(Map<String, String> config, Map<String, ConfigValue> validatedConfig) {
+        String overriddenConsumerGroupIdConfig = CONNECTOR_CLIENT_CONSUMER_OVERRIDES_PREFIX + GROUP_ID_CONFIG;
+        if (config.containsKey(overriddenConsumerGroupIdConfig)) {
+            String consumerGroupId = config.get(overriddenConsumerGroupIdConfig);
+            ConfigValue validatedGroupId = validatedConfig.computeIfAbsent(
+                    overriddenConsumerGroupIdConfig,
+                    p -> new ConfigValue(overriddenConsumerGroupIdConfig, consumerGroupId, List.of(), new ArrayList<>())
+            );
+            if (workerGroupId.equals(consumerGroupId)) {
+                validatedGroupId.addErrorMessage("Consumer group " + consumerGroupId +
+                        " conflicts with Connect worker group " + workerGroupId);
+            }
+        } else {
+            ConfigValue validatedName = validatedConfig.get(ConnectorConfig.NAME_CONFIG);
+            String name = (String) validatedName.value();
+            if (workerGroupId.equals(SinkUtils.consumerGroupId(name))) {
+                validatedName.addErrorMessage("Consumer group for sink connector named " + name +
+                        " conflicts with Connect worker group " + workerGroupId);
+            }
         }
     }
 
@@ -1046,51 +1088,125 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     @Override
     public void putConnectorConfig(final String connName, final Map<String, String> config, final boolean allowReplace,
                                    final Callback<Created<ConnectorInfo>> callback) {
+        putConnectorConfig(connName, config, null, allowReplace, callback);
+    }
+
+    @Override
+    public void putConnectorConfig(final String connName, final Map<String, String> config, final TargetState targetState,
+                                   final boolean allowReplace, final Callback<Created<ConnectorInfo>> callback) {
         log.trace("Submitting connector config write request {}", connName);
         addRequest(
             () -> {
-                validateConnectorConfig(config, (error, configInfos) -> {
-                    if (error != null) {
-                        callback.onCompletion(error, null);
-                        return;
-                    }
-
-                    // Complete the connector config write via another herder request in order to
-                    // perform the write to the backing store (or forward to the leader) during
-                    // the "external request" portion of the tick loop
-                    addRequest(
-                        () -> {
-                            if (maybeAddConfigErrors(configInfos, callback)) {
-                                return null;
-                            }
-
-                            log.trace("Handling connector config request {}", connName);
-                            if (!isLeader()) {
-                                callback.onCompletion(new NotLeaderException("Only the leader can set connector configs.", leaderUrl()), null);
-                                return null;
-                            }
-                            boolean exists = configState.contains(connName);
-                            if (!allowReplace && exists) {
-                                callback.onCompletion(new AlreadyExistsException("Connector " + connName + " already exists"), null);
-                                return null;
-                            }
-
-                            log.trace("Submitting connector config {} {} {}", connName, allowReplace, configState.connectors());
-                            writeToConfigTopicAsLeader(() -> configBackingStore.putConnectorConfig(connName, config));
-
-                            // Note that we use the updated connector config despite the fact that we don't have an updated
-                            // snapshot yet. The existing task info should still be accurate.
-                            ConnectorInfo info = new ConnectorInfo(connName, config, configState.tasks(connName),
-                                connectorType(config));
-                            callback.onCompletion(null, new Created<>(!exists, info));
-                            return null;
-                        },
-                        forwardErrorCallback(callback)
-                    );
-                });
+                doPutConnectorConfig(connName, config, targetState, allowReplace, callback);
                 return null;
             },
-            forwardErrorCallback(callback)
+            forwardErrorAndTickThreadStages(callback)
+        );
+    }
+
+    @Override
+    public void patchConnectorConfig(String connName, Map<String, String> configPatch, Callback<Created<ConnectorInfo>> callback) {
+        log.trace("Submitting connector config patch request {}", connName);
+        addRequest(() -> {
+            // This reduces (but not completely eliminates) the chance for race conditions.
+            if (!isLeader()) {
+                callback.onCompletion(new NotLeaderException("Only the leader can set connector configs.", leaderUrl()), null);
+                return null;
+            }
+
+            ConnectorInfo connectorInfo = connectorInfo(connName);
+            if (connectorInfo == null) {
+                callback.onCompletion(new NotFoundException("Connector " + connName + " not found", null), null);
+            } else {
+                Map<String, String> patchedConfig = ConnectUtils.patchConfig(connectorInfo.config(), configPatch);
+                doPutConnectorConfig(connName, patchedConfig, null, true, callback);
+            }
+            return null;
+        }, forwardErrorAndTickThreadStages(callback));
+    }
+
+    private void doPutConnectorConfig(
+            String connName,
+            Map<String, String> config,
+            TargetState targetState, boolean allowReplace,
+            Callback<Created<ConnectorInfo>> callback) {
+        validateConnectorConfig(config, callback.chainStaging((error, configInfos) -> {
+            if (error != null) {
+                callback.onCompletion(error, null);
+                return;
+            }
+
+            // Complete the connector config write via another herder request in order to
+            // perform the write to the backing store (or forward to the leader) during
+            // the "external request" portion of the tick loop
+            addRequest(
+                    () -> {
+                        if (maybeAddConfigErrors(configInfos, callback)) {
+                            return null;
+                        }
+
+                        log.trace("Handling connector config request {}", connName);
+                        if (!isLeader()) {
+                            callback.onCompletion(new NotLeaderException("Only the leader can set connector configs.", leaderUrl()), null);
+                            return null;
+                        }
+                        boolean exists = configState.contains(connName);
+                        if (!allowReplace && exists) {
+                            callback.onCompletion(new AlreadyExistsException("Connector " + connName + " already exists"), null);
+                            return null;
+                        }
+
+                        log.trace("Submitting connector config {} {} {}", connName, allowReplace, configState.connectors());
+                        writeToConfigTopicAsLeader(
+                                "writing a config for connector " + connName + " to the config topic",
+                                () -> configBackingStore.putConnectorConfig(connName, config, targetState)
+                        );
+
+                        // Note that we use the updated connector config despite the fact that we don't have an updated
+                        // snapshot yet. The existing task info should still be accurate.
+                        ConnectorInfo info = new ConnectorInfo(connName, config, configState.tasks(connName),
+                                connectorType(config));
+                        callback.onCompletion(null, new Created<>(!exists, info));
+                        return null;
+                    },
+                    forwardErrorAndTickThreadStages(callback)
+            );
+        }));
+    }
+    @Override
+    public void stopConnector(final String connName, final Callback<Void> callback) {
+        log.trace("Submitting request to transition connector {} to STOPPED state", connName);
+
+        addRequest(
+                () -> {
+                    if (!configState.contains(connName))
+                        throw new NotFoundException("Unknown connector " + connName);
+
+                    // We only allow the leader to handle this request since it involves writing task configs to the config topic
+                    if (!isLeader()) {
+                        callback.onCompletion(new NotLeaderException("Only the leader can transition connectors to the STOPPED state.", leaderUrl()), null);
+                        return null;
+                    }
+
+                    // We write the task configs first since, if we fail between then and writing the target state, the
+                    // cluster is still kept in a healthy state. A RUNNING connector with zero tasks is acceptable (although,
+                    // if the connector is reassigned during the ensuing rebalance, it is likely that it will immediately generate
+                    // a non-empty set of task configs). A STOPPED connector with a non-empty set of tasks is less acceptable
+                    // and likely to confuse users.
+                    writeTaskConfigs(connName, List.of());
+                    String stageDescription = "writing the STOPPED target stage for connector " + connName + " to the config topic";
+                    try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
+                        configBackingStore.putTargetState(connName, TargetState.STOPPED);
+                    }
+                    // Force a read of the new target state for the connector
+                    if (!refreshConfigSnapshot(workerSyncTimeoutMs)) {
+                        log.warn("Failed to read to end of config topic after writing the STOPPED target state for connector {}", connName);
+                    }
+
+                    callback.onCompletion(null, null);
+                    return null;
+                },
+                forwardErrorAndTickThreadStages(callback)
         );
     }
 
@@ -1133,7 +1249,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 }
                 return null;
             },
-            forwardErrorCallback(callback)
+            forwardErrorAndTickThreadStages(callback)
         );
     }
 
@@ -1151,12 +1267,12 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 else if (!configState.contains(connName))
                     callback.onCompletion(new NotFoundException("Connector " + connName + " not found"), null);
                 else {
-                    writeToConfigTopicAsLeader(() -> configBackingStore.putTaskConfigs(connName, configs));
+                    writeTaskConfigs(connName, configs);
                     callback.onCompletion(null, null);
                 }
                 return null;
             },
-            forwardErrorCallback(callback)
+            forwardErrorAndTickThreadStages(callback)
         );
     }
 
@@ -1189,7 +1305,10 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                     log.trace("Forwarding zombie fencing request for connector {} to leader at {}", id.connector(), fenceUrl);
                     forwardRequestExecutor.execute(() -> {
                         try {
-                            restClient.httpRequest(fenceUrl, "PUT", null, null, null, sessionKey, requestSignatureAlgorithm);
+                            String stageDescription = "Forwarding zombie fencing request to the leader at " + workerUrl;
+                            try (TemporaryStage stage = new TemporaryStage(stageDescription, callback, time)) {
+                                restClient.httpRequest(fenceUrl, "PUT", null, null, sessionKey, requestSignatureAlgorithm);
+                            }
                             callback.onCompletion(null, null);
                         } catch (Throwable t) {
                             callback.onCompletion(t, null);
@@ -1215,74 +1334,80 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
     // Visible for testing
     void fenceZombieSourceTasks(final String connName, final Callback<Void> callback) {
-        addRequest(
-                () -> {
-                    log.trace("Performing zombie fencing request for connector {}", connName);
-                    if (!isLeader())
-                        callback.onCompletion(new NotLeaderException("Only the leader may perform zombie fencing.", leaderUrl()), null);
-                    else if (!configState.contains(connName))
-                        callback.onCompletion(new NotFoundException("Connector " + connName + " not found"), null);
-                    else if (!isSourceConnector(connName))
-                        callback.onCompletion(new BadRequestException("Connector " + connName + " is not a source connector"), null);
-                    else {
-                        if (!refreshConfigSnapshot(workerSyncTimeoutMs)) {
-                            throw new ConnectException("Failed to read to end of config topic before performing zombie fencing");
-                        }
+        addRequest(() -> {
+            doFenceZombieSourceTasks(connName, callback);
+            return null;
+        }, forwardErrorAndTickThreadStages(callback));
+    }
 
-                        int taskCount = configState.taskCount(connName);
-                        Integer taskCountRecord = configState.taskCountRecord(connName);
+    private void doFenceZombieSourceTasks(String connName, Callback<Void> callback) {
+        log.trace("Performing zombie fencing request for connector {}", connName);
 
-                        ZombieFencing zombieFencing = null;
-                        boolean newFencing = false;
-                        synchronized (DistributedHerder.this) {
-                            // Check first to see if we have to do a fencing. The control flow is a little awkward here (why not stick this in
-                            // an else block lower down?) but we can't synchronize around the body below since that may contain a synchronous
-                            // write to the config topic.
-                            if (configState.pendingFencing(connName) && taskCountRecord != null
-                                    && (taskCountRecord != 1 || taskCount != 1)) {
-                                int taskGen = configState.taskConfigGeneration(connName);
-                                zombieFencing = activeZombieFencings.get(connName);
-                                if (zombieFencing == null) {
-                                    zombieFencing = new ZombieFencing(connName, taskCountRecord, taskCount, taskGen);
-                                    activeZombieFencings.put(connName, zombieFencing);
-                                    newFencing = true;
-                                }
-                            }
-                        }
-                        if (zombieFencing != null) {
-                            if (newFencing) {
-                                zombieFencing.start();
-                            }
-                            zombieFencing.addCallback(callback);
-                            return null;
-                        }
+        // We don't have to check for a pending rebalance here
 
-                        if (!configState.pendingFencing(connName)) {
-                            // If the latest task count record for the connector is present after the latest set of task configs, there's no need to
-                            // do any zombie fencing or write a new task count record to the config topic
-                            log.debug("Skipping zombie fencing round for connector {} as all old task generations have already been fenced out", connName);
-                        } else {
-                            if (taskCountRecord == null) {
-                                // If there is no task count record present for the connector, no transactional producers should have been brought up for it,
-                                // so there's nothing to fence--but we do need to write a task count record now so that we know to fence those tasks if/when
-                                // the connector is reconfigured
-                                log.debug("Skipping zombie fencing round but writing task count record for connector {} "
-                                        + "as it is being brought up for the first time with exactly-once source support", connName);
-                            } else {
-                                // If the last generation of tasks only had one task, and the next generation only has one, then the new task will automatically
-                                // fence out the older task if it's still running; no need to fence here, but again, we still need to write a task count record
-                                log.debug("Skipping zombie fencing round but writing task count record for connector {} "
-                                        + "as both the most recent and the current generation of task configs only contain one task", connName);
-                            }
-                            writeToConfigTopicAsLeader(() -> configBackingStore.putTaskCountRecord(connName, taskCount));
-                        }
-                        callback.onCompletion(null, null);
-                        return null;
+        if (!isLeader())
+            callback.onCompletion(new NotLeaderException("Only the leader may perform zombie fencing.", leaderUrl()), null);
+        else if (!configState.contains(connName))
+            callback.onCompletion(new NotFoundException("Connector " + connName + " not found"), null);
+        else if (!isSourceConnector(connName))
+            callback.onCompletion(new BadRequestException("Connector " + connName + " is not a source connector"), null);
+        else {
+            if (!refreshConfigSnapshot(workerSyncTimeoutMs)) {
+                throw new ConnectException("Failed to read to end of config topic before performing zombie fencing");
+            }
+
+            int taskCount = configState.taskCount(connName);
+            Integer taskCountRecord = configState.taskCountRecord(connName);
+
+            ZombieFencing zombieFencing = null;
+            boolean newFencing = false;
+            synchronized (DistributedHerder.this) {
+                // Check first to see if we have to do a fencing. The control flow is a little awkward here (why not stick this in
+                // an else block lower down?) but we can't synchronize around the body below since that may contain a synchronous
+                // write to the config topic.
+                if (configState.pendingFencing(connName) && taskCountRecord != null
+                        && (taskCountRecord != 1 || taskCount != 1)) {
+                    int taskGen = configState.taskConfigGeneration(connName);
+                    zombieFencing = activeZombieFencings.get(connName);
+                    if (zombieFencing == null) {
+                        zombieFencing = new ZombieFencing(connName, taskCountRecord, taskCount, taskGen);
+                        activeZombieFencings.put(connName, zombieFencing);
+                        newFencing = true;
                     }
-                    return null;
-                },
-                forwardErrorCallback(callback)
-        );
+                }
+            }
+            if (zombieFencing != null) {
+                if (newFencing) {
+                    zombieFencing.start();
+                }
+                zombieFencing.addCallback(callback);
+                return;
+            }
+
+            if (!configState.pendingFencing(connName)) {
+                // If the latest task count record for the connector is present after the latest set of task configs, there's no need to
+                // do any zombie fencing or write a new task count record to the config topic
+                log.debug("Skipping zombie fencing round for connector {} as all old task generations have already been fenced out", connName);
+            } else {
+                if (taskCountRecord == null) {
+                    // If there is no task count record present for the connector, no transactional producers should have been brought up for it,
+                    // so there's nothing to fence--but we do need to write a task count record now so that we know to fence those tasks if/when
+                    // the connector is reconfigured
+                    log.debug("Skipping zombie fencing round but writing task count record for connector {} "
+                            + "as it is being brought up for the first time with exactly-once source support", connName);
+                } else {
+                    // If the last generation of tasks only had one task, and the next generation only has one, then the new task will automatically
+                    // fence out the older task if it's still running; no need to fence here, but again, we still need to write a task count record
+                    log.debug("Skipping zombie fencing round but writing task count record for connector {} "
+                            + "as both the most recent and the current generation of task configs only contain one task", connName);
+                }
+                writeToConfigTopicAsLeader(
+                        "writing a task count record for connector " + connName + " to the config topic",
+                        () -> configBackingStore.putTaskCountRecord(connName, taskCount)
+                );
+            }
+            callback.onCompletion(null, null);
+        }
     }
 
     @Override
@@ -1305,7 +1430,9 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
                 if (assignment.connectors().contains(connName)) {
                     try {
-                        worker.stopAndAwaitConnector(connName);
+                        try (TickThreadStage stage = new TickThreadStage("stopping restarted connector " + connName)) {
+                            worker.stopAndAwaitConnector(connName);
+                        }
                         startConnector(connName, callback);
                     } catch (Throwable t) {
                         callback.onCompletion(t, null);
@@ -1317,7 +1444,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 }
                 return null;
             },
-            forwardErrorCallback(callback));
+            forwardErrorAndTickThreadStages(callback));
     }
 
     @Override
@@ -1338,7 +1465,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 }
 
                 if (assignment.tasks().contains(id)) {
-                    try {
+                    try (TickThreadStage stage = new TickThreadStage("restarting task " + id)) {
                         worker.stopAndAwaitTask(id);
                         if (startTask(id))
                             callback.onCompletion(null, null);
@@ -1354,7 +1481,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 }
                 return null;
             },
-            forwardErrorCallback(callback));
+            forwardErrorAndTickThreadStages(callback));
     }
 
     @Override
@@ -1376,10 +1503,13 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                     }
                     if (isLeader()) {
                         // Write a restart request to the config backing store, to be executed asynchronously in tick()
-                        configBackingStore.putRestartRequest(request);
+                        String stageDescription = "writing restart request for connector " + request.connectorName() + " to the config topic";
+                        try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
+                            configBackingStore.putRestartRequest(request);
+                        }
                         // Compute and send the response that this was accepted
                         Optional<RestartPlan> plan = buildRestartPlan(request);
-                        if (!plan.isPresent()) {
+                        if (plan.isEmpty()) {
                             callback.onCompletion(new NotFoundException("Status for connector " + connectorName + " not found", null), null);
                         } else {
                             callback.onCompletion(null, plan.get().restartConnectorStateInfo());
@@ -1389,7 +1519,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                     }
                     return null;
                 },
-                forwardErrorCallback(callback)
+                forwardErrorAndTickThreadStages(callback)
         );
     }
 
@@ -1409,10 +1539,11 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             pendingRestartRequests.clear();
         }
         restartRequests.forEach(restartRequest -> {
-            try {
+            String stageDescription = "handling restart request for connector " + restartRequest.connectorName();
+            try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
                 doRestartConnectorAndTasks(restartRequest);
             } catch (Exception e) {
-                log.warn("Unexpected error while trying to process " + restartRequest + ", the restart request will be skipped.", e);
+                log.warn("Unexpected error while trying to process {}, the restart request will be skipped.", restartRequest, e);
             }
         });
     }
@@ -1426,7 +1557,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     protected synchronized void doRestartConnectorAndTasks(RestartRequest request) {
         String connectorName = request.connectorName();
         Optional<RestartPlan> maybePlan = buildRestartPlan(request);
-        if (!maybePlan.isPresent()) {
+        if (maybePlan.isEmpty()) {
             log.debug("Skipping restart of connector '{}' since no status is available: {}", connectorName, request);
             return;
         }
@@ -1442,12 +1573,18 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
         final boolean restartConnector = plan.shouldRestartConnector() && currentAssignments.connectors().contains(connectorName);
         final boolean restartTasks = !assignedIdsToRestart.isEmpty();
         if (restartConnector) {
-            worker.stopAndAwaitConnector(connectorName);
+            String stageDescription = "stopping to-be-restarted connector " + connectorName;
+            try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
+                worker.stopAndAwaitConnector(connectorName);
+            }
             onRestart(connectorName);
         }
         if (restartTasks) {
+            String stageDescription = "stopping " + assignedIdsToRestart.size() + " to-be-restarted tasks for connector " + connectorName;
             // Stop the tasks and mark as restarting
-            worker.stopAndAwaitTasks(assignedIdsToRestart);
+            try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
+                worker.stopAndAwaitTasks(assignedIdsToRestart);
+            }
             assignedIdsToRestart.forEach(this::onRestart);
         }
 
@@ -1492,12 +1629,95 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                     super.connectorOffsets(connName, cb);
                     return null;
                 },
-                forwardErrorCallback(cb)
+                forwardErrorAndTickThreadStages(cb)
         );
     }
 
+    @Override
+    protected void modifyConnectorOffsets(String connName, Map<Map<String, ?>, Map<String, ?>> offsets, Callback<Message> callback) {
+        log.trace("Submitting {} offsets request for connector '{}'", offsets == null ? "reset" : "alter", connName);
+
+        addRequest(() -> {
+            if (!modifyConnectorOffsetsChecks(connName, callback)) {
+                return null;
+            }
+            // At this point, we should be the leader (the call to modifyConnectorOffsetsChecks makes sure of that) and can safely run
+            // a zombie fencing request
+            if (isSourceConnector(connName) && config.exactlyOnceSourceEnabled()) {
+                log.debug("Performing a round of zombie fencing before modifying offsets for source connector {} with exactly-once support enabled.", connName);
+                doFenceZombieSourceTasks(connName, (error, ignored) -> {
+                    if (error != null) {
+                        log.error("Failed to perform zombie fencing for source connector prior to modifying offsets", error);
+                        callback.onCompletion(new ConnectException("Failed to perform zombie fencing for source connector prior to modifying offsets", error), null);
+                    } else {
+                        log.debug("Successfully completed zombie fencing for source connector {}; proceeding to modify offsets.", connName);
+                        // We need to ensure that we perform the necessary checks again before proceeding to actually altering / resetting the connector offsets since
+                        // zombie fencing is done asynchronously and the conditions could have changed since the previous check
+                        addRequest(() -> {
+                            try (TickThreadStage stage = new TickThreadStage("modifying offsets for connector " + connName)) {
+                                if (modifyConnectorOffsetsChecks(connName, callback)) {
+                                    worker.modifyConnectorOffsets(connName, configState.connectorConfig(connName), offsets, callback);
+                                }
+                            }
+                            return null;
+                        }, forwardErrorAndTickThreadStages(callback));
+                    }
+                });
+            } else {
+                try (TickThreadStage stage = new TickThreadStage("modifying offsets for connector " + connName)) {
+                    worker.modifyConnectorOffsets(connName, configState.connectorConfig(connName), offsets, callback);
+                }
+            }
+            return null;
+        }, forwardErrorAndTickThreadStages(callback));
+    }
+
+    /**
+     * This method performs a few checks for external requests to modify (alter or reset) connector offsets and
+     * completes the callback exceptionally if any check fails.
+     * @param connName the name of the connector whose offsets are to be modified
+     * @param callback callback to invoke upon completion
+     * @return true if all the checks passed, false otherwise
+     */
+    private boolean modifyConnectorOffsetsChecks(String connName, Callback<Message> callback) {
+        if (checkRebalanceNeeded(callback)) {
+            return false;
+        }
+
+        if (!isLeader()) {
+            callback.onCompletion(new NotLeaderException("Only the leader can process external offsets modification requests", leaderUrl()), null);
+            return false;
+        }
+
+        if (!refreshConfigSnapshot(workerSyncTimeoutMs)) {
+            throw new ConnectException("Failed to read to end of config topic before modifying connector offsets");
+        }
+
+        if (!configState.contains(connName)) {
+            callback.onCompletion(new NotFoundException("Connector " + connName + " not found", null), null);
+            return false;
+        }
+
+        // If the target state for the connector is stopped, its task count is 0, and there is no rebalance pending (checked above),
+        // we can be sure that the tasks have at least been attempted to be stopped (or cancelled if they took too long to stop).
+        // Zombie tasks are handled by a round of zombie fencing for exactly once source connectors. Zombie sink tasks are handled
+        // naturally because requests to alter consumer group offsets / delete consumer groups will fail if there are still active members
+        // in the group.
+        if (configState.targetState(connName) != TargetState.STOPPED || configState.taskCount(connName) != 0) {
+            callback.onCompletion(new BadRequestException("Connectors must be in the STOPPED state before their offsets can be modified. This can be done " +
+                    "for the specified connector by issuing a 'PUT' request to the '/connectors/" + connName + "/stop' endpoint"), null);
+            return false;
+        }
+        return true;
+    }
+
+    @Override
+    public void setClusterLoggerLevel(String namespace, String level) {
+        configBackingStore.putLoggerLevel(namespace, level);
+    }
+
     // Should only be called from work thread, so synchronization should not be needed
-    private boolean isLeader() {
+    protected boolean isLeader() {
         return assignment != null && member.memberId().equals(assignment.leader());
     }
 
@@ -1516,11 +1736,12 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
      * Note that it is not necessary to wrap every write to the config topic in this method, only the writes that should be performed
      * exclusively by the leader. For example, {@link ConfigBackingStore#putTargetState(String, TargetState)} does not require this
      * method, as it can be invoked by any worker in the cluster.
+     * @param description a description of the action; e.g., "writing 5 task configs for connector file-source"
      * @param write the action that writes to the config topic, such as {@link ConfigBackingStore#putSessionKey(SessionKey)} or
-     *              {@link ConfigBackingStore#putConnectorConfig(String, Map)}.
+     *              {@link ConfigBackingStore#putConnectorConfig(String, Map, TargetState)}.
      */
-    private void writeToConfigTopicAsLeader(Runnable write) {
-        try {
+    private void writeToConfigTopicAsLeader(String description, Runnable write) {
+        try (TickThreadStage stage = new TickThreadStage(description)) {
             write.run();
         } catch (PrivilegedWriteException e) {
             log.warn("Failed to write to config topic as leader; will rejoin group if necessary and, if still leader, attempt to reclaim write privileges for the config topic", e);
@@ -1561,7 +1782,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 log.warn("Join group completed, but assignment failed and we are the leader. Reading to end of config and retrying.");
                 needsReadToEnd = true;
             } else if (configState.offset() < assignment.offset()) {
-                log.warn("Join group completed, but assignment failed and we lagging. Reading to end of config and retrying.");
+                log.warn("Join group completed, but assignment failed and we are lagging. Reading to end of config and retrying.");
                 needsReadToEnd = true;
             } else {
                 log.warn("Join group completed, but assignment failed. We were up to date, so just retrying.");
@@ -1576,7 +1797,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
         long now = time.milliseconds();
         if (scheduledRebalance <= now) {
             log.debug("Requesting rebalance because scheduled rebalance timeout has been reached "
-                    + "(now: {} scheduledRebalance: {}", scheduledRebalance, now);
+                    + "now: {} scheduledRebalance: {}", now, scheduledRebalance);
 
             needsRejoin = true;
             scheduledRebalance = Long.MAX_VALUE;
@@ -1622,7 +1843,15 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             member.requestRejoin();
             return false;
         }
+        rebalanceSuccess();
         return true;
+    }
+
+    /**
+     * Hook for performing operations after a successful rebalance
+     */
+    protected void rebalanceSuccess() {
+        // This space intentionally left blank.
     }
 
     /**
@@ -1657,7 +1886,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
      * @return true if successful; false if timed out
      */
     private boolean refreshConfigSnapshot(long timeoutMs) {
-        try {
+        try (TickThreadStage stage = new TickThreadStage("reading to the end of the config topic")) {
             configBackingStore.refresh(timeoutMs, TimeUnit.MILLISECONDS);
             configState = configBackingStore.snapshot();
             log.info("Finished reading to end of log and updated config snapshot, new config log offset: {}", configState.offset());
@@ -1671,14 +1900,20 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
     private void backoff(long ms) {
         if (ConnectProtocolCompatibility.fromProtocolVersion(currentProtocolVersion) == EAGER) {
-            time.sleep(ms);
+            String stageDescription = "sleeping for a backoff duration of " + ms + "ms";
+            try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
+                time.sleep(ms);
+            }
             return;
         }
 
         if (backoffRetries > 0) {
             int rebalanceDelayFraction =
                     config.getInt(DistributedConfig.SCHEDULED_REBALANCE_MAX_DELAY_MS_CONFIG) / 10 / backoffRetries;
-            time.sleep(rebalanceDelayFraction);
+            String stageDescription = "sleeping for a backoff duration of " + rebalanceDelayFraction + "ms";
+            try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
+                time.sleep(rebalanceDelayFraction);
+            }
             --backoffRetries;
             return;
         }
@@ -1695,8 +1930,11 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     }
 
     // Visible for testing
-    void startAndStop(Collection<Callable<Void>> callables) {
-        try {
+    void startAndStop(Collection<Callable<Void>> callables, String stageDescription) {
+        if (callables.isEmpty())
+            return;
+
+        try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
             startAndStopExecutor.invokeAll(callables);
         } catch (InterruptedException e) {
             // ignore
@@ -1739,7 +1977,8 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             }
         }
 
-        startAndStop(callables);
+        String stageDescription = "starting " + callables.size() + " connector(s) and task(s) after a rebalance";
+        startAndStop(callables, stageDescription);
 
         synchronized (this) {
             runningAssignment = member.currentProtocolVersion() == CONNECT_PROTOCOL_V0
@@ -1838,7 +2077,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     private void startConnector(String connectorName, Callback<Void> callback) {
         log.info("Starting connector {}", connectorName);
         final Map<String, String> configProps = configState.connectorConfig(connectorName);
-        final CloseableConnectorContext ctx = new HerderConnectorContext(this, connectorName);
+        final CloseableConnectorContext ctx = new HerderConnectorContext(this, connectorName, worker.metrics().connectorPluginMetrics(connectorName));
         final TargetState initialState = configState.targetState(connectorName);
         final Callback<TargetState> onInitialStateChange = (error, newState) -> {
             if (error != null) {
@@ -1857,12 +2096,13 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                         callback.onCompletion(null, null);
                         return null;
                     },
-                    forwardErrorCallback(callback)
+                    forwardErrorAndTickThreadStages(callback)
                 );
             } else {
                 callback.onCompletion(null, null);
             }
         };
+        callback.recordStage(new Stage("starting the connector", time.milliseconds()));
         worker.startConnector(connectorName, configProps, ctx, this, initialState, onInitialStateChange);
     }
 
@@ -1871,11 +2111,11 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             try {
                 startConnector(connectorName, (error, result) -> {
                     if (error != null) {
-                        log.error("Failed to start connector '" + connectorName + "'", error);
+                        log.error("Failed to start connector '{}'", connectorName, error);
                     }
                 });
             } catch (Throwable t) {
-                log.error("Unexpected error while trying to start connector " + connectorName, t);
+                log.error("Unexpected error while trying to start connector {}", connectorName, t);
                 onFailure(connectorName, t);
             }
             return null;
@@ -1887,7 +2127,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             try {
                 worker.stopAndAwaitConnector(connectorName);
             } catch (Throwable t) {
-                log.error("Failed to shut down connector " + connectorName, t);
+                log.error("Failed to shut down connector {}", connectorName, t);
             }
             return null;
         };
@@ -1929,6 +2169,9 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             if (error != null) {
                 if (isPossibleExpiredKeyException(initialRequestTime, error)) {
                     log.debug("Failed to reconfigure connector's tasks ({}), possibly due to expired session key. Retrying after backoff", connName);
+                } else if (error instanceof TooManyTasksException) {
+                    log.debug("Connector {} generated too many tasks; will not retry configuring connector", connName);
+                    return;
                 } else {
                     log.error("Failed to reconfigure connector's tasks ({}), retrying after backoff.", connName, error);
                 }
@@ -1948,8 +2191,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     }
 
     boolean isPossibleExpiredKeyException(long initialRequestTime, Throwable error) {
-        if (error instanceof ConnectRestException) {
-            ConnectRestException connectError = (ConnectRestException) error;
+        if (error instanceof ConnectRestException connectError) {
             return connectError.statusCode() == Response.Status.FORBIDDEN.getStatusCode()
                 && initialRequestTime + TimeUnit.MINUTES.toMillis(1) >= time.milliseconds();
         }
@@ -1963,6 +2205,9 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             if (!worker.isRunning(connName)) {
                 log.info("Skipping reconfiguration of connector {} since it is not running", connName);
                 return;
+            } else if (configState.targetState(connName) != TargetState.STARTED) {
+                log.info("Skipping reconfiguration of connector {} since its target state is {}", connName, configState.targetState(connName));
+                return;
             }
 
             Map<String, String> configs = configState.connectorConfig(connName);
@@ -1973,52 +2218,74 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             } else {
                 connConfig = new SourceConnectorConfig(plugins(), configs, worker.isTopicCreationEnabled());
             }
-
-            final List<Map<String, String>> taskProps = worker.connectorTaskConfigs(connName, connConfig);
-            if (taskConfigsChanged(configState, connName, taskProps)) {
-                List<Map<String, String>> rawTaskProps = reverseTransform(connName, configState, taskProps);
-                if (isLeader()) {
-                    writeToConfigTopicAsLeader(() -> configBackingStore.putTaskConfigs(connName, rawTaskProps));
-                    cb.onCompletion(null, null);
-                } else if (restClient == null) {
-                    throw new NotLeaderException("This worker is not able to communicate with the leader of the cluster, "
-                            + "which is required for dynamically-reconfiguring connectors. If running MirrorMaker 2 "
-                            + "in dedicated mode, consider enabling inter-worker communication via the "
-                            + "'dedicated.mode.enable.internal.rest' property.",
-                            leaderUrl()
-                    );
-                } else {
-                    // We cannot forward the request on the same thread because this reconfiguration can happen as a result of connector
-                    // addition or removal. If we blocked waiting for the response from leader, we may be kicked out of the worker group.
-                    forwardRequestExecutor.submit(() -> {
-                        try {
-                            String leaderUrl = leaderUrl();
-                            if (Utils.isBlank(leaderUrl)) {
-                                cb.onCompletion(new ConnectException("Request to leader to " +
-                                        "reconfigure connector tasks failed " +
-                                        "because the URL of the leader's REST interface is empty!"), null);
-                                return;
-                            }
-                            String reconfigUrl = namespacedUrl(leaderUrl)
-                                    .path("connectors")
-                                    .path(connName)
-                                    .path("tasks")
-                                    .build()
-                                    .toString();
-                            log.trace("Forwarding task configurations for connector {} to leader", connName);
-                            restClient.httpRequest(reconfigUrl, "POST", null, rawTaskProps, null, sessionKey, requestSignatureAlgorithm);
-                            cb.onCompletion(null, null);
-                            log.trace("Request to leader to reconfigure connector tasks succeeded");
-                        } catch (ConnectException e) {
-                            log.error("Request to leader to reconfigure connector tasks failed", e);
-                            cb.onCompletion(e, null);
-                        }
-                    });
-                }
+            final List<Map<String, String>> taskProps;
+            try (TickThreadStage stage = new TickThreadStage("generating task configs for connector " + connName)) {
+                taskProps = worker.connectorTaskConfigs(connName, connConfig);
             }
+            publishConnectorTaskConfigs(connName, taskProps, cb);
         } catch (Throwable t) {
             cb.onCompletion(t, null);
         }
+    }
+
+    private void publishConnectorTaskConfigs(String connName, List<Map<String, String>> taskProps, Callback<Void> cb) {
+        List<Map<String, String>> rawTaskProps = reverseTransform(connName, configState, taskProps);
+        if (!taskConfigsChanged(configState, connName, rawTaskProps)) {
+            return;
+        }
+
+        if (isLeader()) {
+            writeTaskConfigs(connName, rawTaskProps);
+            cb.onCompletion(null, null);
+        } else if (restClient == null) {
+            throw new NotLeaderException("This worker is not able to communicate with the leader of the cluster, "
+                    + "which is required for dynamically-reconfiguring connectors. If running MirrorMaker 2 "
+                    + "in dedicated mode, consider enabling inter-worker communication via the "
+                    + "'dedicated.mode.enable.internal.rest' property.",
+                    leaderUrl()
+            );
+        } else {
+            // We cannot forward the request on the same thread because this reconfiguration can happen as a result of connector
+            // addition or removal. If we blocked waiting for the response from leader, we may be kicked out of the worker group.
+            forwardRequestExecutor.submit(() -> {
+                try {
+                    String leaderUrl = leaderUrl();
+                    if (Utils.isBlank(leaderUrl)) {
+                        cb.onCompletion(new ConnectException("Request to leader to " +
+                                "reconfigure connector tasks failed " +
+                                "because the URL of the leader's REST interface is empty!"), null);
+                        return;
+                    }
+                    String reconfigUrl = namespacedUrl(leaderUrl)
+                            .path("connectors")
+                            .path(connName)
+                            .path("tasks")
+                            .build()
+                            .toString();
+                    log.trace("Forwarding task configurations for connector {} to leader", connName);
+                    String stageDescription = "Forwarding task configurations to the leader at " + leaderUrl;
+                    try (TemporaryStage stage = new TemporaryStage(stageDescription, cb, time)) {
+                        restClient.httpRequest(reconfigUrl, "POST", null, rawTaskProps, sessionKey, requestSignatureAlgorithm);
+                    }
+                    cb.onCompletion(null, null);
+                } catch (ConnectException e) {
+                    log.error("Request to leader to reconfigure connector tasks failed", e);
+                    cb.onCompletion(e, null);
+                }
+            });
+        }
+    }
+
+    private void writeTaskConfigs(String connName, List<Map<String, String>> taskConfigs) {
+        if (!taskConfigs.isEmpty()) {
+            if (configState.targetState(connName) == TargetState.STOPPED)
+                throw new BadRequestException("Cannot submit non-empty set of task configs for stopped connector " + connName);
+        }
+
+        writeToConfigTopicAsLeader(
+                "writing " + taskConfigs.size() + " task configs for connector " + connName + " to the config topic",
+                () -> configBackingStore.putTaskConfigs(connName, taskConfigs)
+        );
     }
 
     // Invoked by exactly-once worker source tasks after they have successfully initialized their transactional
@@ -2033,7 +2300,7 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
         addRequest(
             () -> verifyTaskGenerationAndOwnership(id, initialTaskGen, verifyCallback),
-            forwardErrorCallback(verifyCallback)
+            forwardErrorAndTickThreadStages(verifyCallback)
         );
 
         try {
@@ -2095,8 +2362,16 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
     }
 
     DistributedHerderRequest addRequest(long delayMs, Callable<Void> action, Callback<Void> callback) {
+        callback.recordStage(tickThreadStage);
         DistributedHerderRequest req = new DistributedHerderRequest(time.milliseconds() + delayMs, requestSeqNum.incrementAndGet(), action, callback);
         requests.add(req);
+        // We don't need to synchronize here
+        // If the condition evaluates to true, we can and should trigger a wakeup
+        // If it evaluates to false because our request has suddenly been popped off of the queue, then
+        // the herder is already running the request and no wakeup is necessary
+        // If it evaluates to false because our request was not at the head of the queue, then a wakeup
+        // should already have been triggered when the request that is currently at the head of the
+        // queue was added
         if (peekWithoutException() == req)
             member.wakeup();
         return req;
@@ -2108,6 +2383,8 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             callback.onCompletion(null, null);
         } catch (Throwable t) {
             callback.onCompletion(t, null);
+        } finally {
+            currentRequest = null;
         }
     }
 
@@ -2135,10 +2412,13 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             log.info("Connector {} config removed", connector);
 
             synchronized (DistributedHerder.this) {
-                // rebalance after connector removal to ensure that existing tasks are balanced among workers
-                if (configState.contains(connector))
+                if (configState.contains(connector)) {
+                    // rebalance after connector removal to ensure that existing tasks are balanced among workers
                     needsReconfigRebalance = true;
-                connectorConfigUpdates.add(connector);
+                } else {
+                    connectorConfigUpdates.add(connector);
+                }
+
             }
             member.wakeup();
         }
@@ -2151,9 +2431,13 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             // to be bounced. However, this callback may also indicate a connector *addition*, which does require
             // a rebalance, so we need to be careful about what operation we request.
             synchronized (DistributedHerder.this) {
-                if (!configState.contains(connector))
+                if (!configState.contains(connector)) {
                     needsReconfigRebalance = true;
-                connectorConfigUpdates.add(connector);
+                } else {
+                    // Only need to restart the connector if it already existed
+                    connectorConfigUpdates.add(connector);
+                }
+
             }
             member.wakeup();
         }
@@ -2236,6 +2520,11 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             }
             member.wakeup();
         }
+
+        @Override
+        public void onLoggingLevelUpdate(String namespace, String level) {
+            setWorkerLoggerLevel(namespace, level);
+        }
     }
 
     class DistributedHerderRequest implements HerderRequest, Comparable<DistributedHerderRequest> {
@@ -2273,9 +2562,8 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
         @Override
         public boolean equals(Object o) {
             if (this == o) return true;
-            if (!(o instanceof DistributedHerderRequest))
+            if (!(o instanceof DistributedHerderRequest other))
                 return false;
-            DistributedHerderRequest other = (DistributedHerderRequest) o;
             return compareTo(other) == 0;
         }
 
@@ -2285,11 +2573,11 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
         }
     }
 
-    private static Callback<Void> forwardErrorCallback(final Callback<?> callback) {
-        return (error, result) -> {
+    private static Callback<Void> forwardErrorAndTickThreadStages(final Callback<?> callback) {
+        return callback.chainStaging((error, result) -> {
             if (error != null)
                 callback.onCompletion(error, null);
-        };
+        });
     }
 
     private void updateDeletedConnectorStatus() {
@@ -2420,7 +2708,8 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
 
                 // The actual timeout for graceful task/connector stop is applied in worker's
                 // stopAndAwaitTask/stopAndAwaitConnector methods.
-                startAndStop(callables);
+                String stageDescription = "stopping " + connectors.size() + " and " + tasks.size() + " tasks";
+                startAndStop(callables, stageDescription);
                 log.info("Finished stopping tasks in preparation for rebalance");
 
                 synchronized (DistributedHerder.this) {
@@ -2439,22 +2728,36 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
                 // Ensure that all status updates have been pushed to the storage system before rebalancing.
                 // Otherwise, we may inadvertently overwrite the state with a stale value after the rebalance
                 // completes.
-                statusBackingStore.flush();
+                try (TickThreadStage stage = new TickThreadStage("flushing updates to the status topic")) {
+                    statusBackingStore.flush();
+                }
                 log.info("Finished flushing status backing store in preparation for rebalance");
             } else {
                 log.info("Wasn't able to resume work after last rebalance, can skip stopping connectors and tasks");
             }
         }
 
+        @Override
+        public void onPollTimeoutExpiry() {
+            log.warn("worker poll timeout has expired. The last known action being performed by the worker is : {} and may contribute to the timeout. " +
+                "Please review the last action (if known) for any corrective actions. " +
+                "One of the ways of addressing this can be increasing the rebalance.timeout.ms configuration value. Please note that " +
+                "rebalance.timeout.ms also controls the maximum allowed time for each worker to join the group once a " +
+                "rebalance has begun so the set value should not be very high", tickThreadStage == null ? "not known" : tickThreadStage.description());
+        }
+
         private void resetActiveTopics(Collection<String> connectors, Collection<ConnectorTaskId> tasks) {
-            connectors.stream()
-                    .filter(connectorName -> !configState.contains(connectorName))
-                    .forEach(DistributedHerder.this::resetConnectorActiveTopics);
-            tasks.stream()
-                    .map(ConnectorTaskId::connector)
-                    .distinct()
-                    .filter(connectorName -> !configState.contains(connectorName))
-                    .forEach(DistributedHerder.this::resetConnectorActiveTopics);
+            String stageDescription = "resetting the list of active topics for " + connectors.size() + " and " + tasks.size() + " tasks";
+            try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
+                connectors.stream()
+                        .filter(connectorName -> !configState.contains(connectorName))
+                        .forEach(DistributedHerder.this::resetConnectorActiveTopics);
+                tasks.stream()
+                        .map(ConnectorTaskId::connector)
+                        .distinct()
+                        .filter(connectorName -> !configState.contains(connectorName))
+                        .forEach(DistributedHerder.this::resetConnectorActiveTopics);
+            }
         }
     }
 
@@ -2512,6 +2815,43 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
         return result;
     }
 
+    private synchronized void recordTickThreadStage(String description) {
+        assert description != null;
+
+        log.trace("Recording new tick thread stage: {}", description);
+
+        // Preserve the current stage to report to requests submitted after this method is invoked
+        this.tickThreadStage = new Stage(description, time.milliseconds());
+        // Report the current stage to all pending requests
+        requests.forEach(request -> request.callback().recordStage(tickThreadStage));
+        // And, if there is an in-progress request, report the stage to it as well
+        Optional.ofNullable(currentRequest).map(DistributedHerderRequest::callback)
+                .ifPresent(callback -> callback.recordStage(tickThreadStage));
+    }
+
+    private synchronized void completeTickThreadStage() {
+        // This is expected behavior with nested stages; can just no-op
+        if (tickThreadStage == null)
+            return;
+
+        log.trace("Completing current tick thread stage; was {}", tickThreadStage);
+
+        tickThreadStage.complete(time.milliseconds());
+        tickThreadStage = null;
+    }
+
+    private class TickThreadStage implements UncheckedCloseable {
+        public TickThreadStage(String description) {
+            if (description != null)
+                recordTickThreadStage(description);
+        }
+
+        @Override
+        public void close() {
+            completeTickThreadStage();
+        }
+    }
+
     /**
      * Represents an active zombie fencing: that is, an in-progress attempt to invoke
      * {@link Worker#fenceZombies(String, int, Map)} and then, if successful, write a new task count
@@ -2545,18 +2885,21 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             if (fencingFuture != null) {
                 throw new IllegalStateException("Cannot invoke start() multiple times");
             }
-            fencingFuture = worker.fenceZombies(connName, tasksToFence, configState.connectorConfig(connName)).thenApply(ignored -> {
-                // This callback will be called on the same thread that invokes KafkaFuture::thenApply if
-                // the future is already completed. Since that thread is the herder tick thread, we don't need
-                // to perform follow-up logic through an additional herder request (and if we tried, it would lead
-                // to deadlock)
-                runOnTickThread(
-                        this::onZombieFencingSuccess,
-                        fencingFollowup
-                );
-                awaitFollowup();
-                return null;
-            });
+            String stageDescription = "initiating a round of zombie fencing for connector " + connName;
+            try (TickThreadStage stage = new TickThreadStage(stageDescription)) {
+                fencingFuture = worker.fenceZombies(connName, tasksToFence, configState.connectorConfig(connName)).thenApply(ignored -> {
+                    // This callback will be called on the same thread that invokes KafkaFuture::thenApply if
+                    // the future is already completed. Since that thread is the herder tick thread, we don't need
+                    // to perform follow-up logic through an additional herder request (and if we tried, it would lead
+                    // to deadlock)
+                    runOnTickThread(
+                            this::onZombieFencingSuccess,
+                            fencingFollowup
+                    );
+                    awaitFollowup();
+                    return null;
+                });
+            }
             // Immediately after the fencing and necessary followup work (i.e., writing the task count record to the config topic)
             // is complete, remove this from the list of active fencings
             addCallback((ignored, error) -> {
@@ -2582,7 +2925,10 @@ public class DistributedHerder extends AbstractHerder implements Runnable {
             if (fencingFollowup.isDone()) {
                 return null;
             }
-            writeToConfigTopicAsLeader(() -> configBackingStore.putTaskCountRecord(connName, tasksToRecord));
+            writeToConfigTopicAsLeader(
+                    "writing a task count record for connector " + connName + " to the config topic",
+                    () -> configBackingStore.putTaskCountRecord(connName, tasksToRecord)
+            );
             return null;
         }
 
